--- a/post.html
+++ b/post.html
@@ -48,11 +48,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark color">
-      <a
-        class="navbar-brand"
-        href="https://csb-hnimd-7j9pm8kdv-albatraozh.vercel.app/"
-        >Home</a
-      >
+      <a class="navbar-brand" href="blogunifin.vercel.app">Home</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -67,7 +63,8 @@
           <li class="nav-item active">
             <a
               class="nav-link"
-              href="https://csb-hnimd-7j9pm8kdv-albatraozh.vercel.app/"
+              href="blogunifin.vercel.app
+              "
               >Articles</a
             >
           </li>
