--- a/post.html
+++ b/post.html
@@ -48,7 +48,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark color">
-      <a class="navbar-brand" href="blogunifin.vercel.app">Home</a>
+      <a class="navbar-brand" href="http://blogunifin.vercel.app">Home</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -63,7 +63,7 @@
           <li class="nav-item active">
             <a
               class="nav-link"
-              href="blogunifin.vercel.app
+              href="http://blogunifin.vercel.app
               "
               >Articles</a
             >
